# sphinx_timeline_domain

./: .envrc  .readthedocs.yaml  .related  README.md  VERSION.toml  checklist.md  pyproject.toml  towncrier.toml  tox.toml
.github/workflows/: python-publish.yml
src/_docs/: conf.py
src/sphinx_timeline_domain/: __init__.py  _interface.py  index.rst  parser.py  timeline_domain.py
src/sphinx_timeline_domain/_templates/timeline_domain/: footer.rst.jinja  header.rst.jinja  timeline.rst.jinja
src/sphinx_timeline_domain/directives/: __init__.py  timeline.py
src/sphinx_timeline_domain/indices/: __init__.py  year.py
src/sphinx_timeline_domain/roles/: __init__.py  author.py
src/sphinx_timeline_domain/util/: dsl.py
src/sphinx_timeline_domain/util/__tests/: test_dsl.py
